--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -13,7 +13,7 @@
                         })
                     </script>
                     <!-- Embed Video as Background-->
-                    <div style="width:initial;" >
+                    <div style="width:initial;" class="overlay-texture">
                         <%= video_tag("office_video.mp4", :controls => false, :autobuffer => true, :autoplay => true, :loop => true, :id => "video-background") %>
                     </div>
                     <div class="container-fluid key_text">
