--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -77,7 +77,7 @@ aside {
 }
 
 .no-padding {
-    padding: 0;
+    padding-bottom: 0;
 }
 
 .navbar-default {
@@ -136,7 +136,7 @@ aside {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
         background-color: transparent;
-        text-shadow: 0px 0px 0.2px white;
+/*        text-shadow: 0px 0px 0.2px white;*/
     }
 
     .navbar-default .navbar-header .navbar-brand {
