--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -136,7 +136,7 @@ aside {
     .navbar-default {
         border-color: rgba(255,255,255,.3);
         background-color: transparent;
-/*        text-shadow: 0px 0px 0.2px white;*/
+        /*text-shadow: 0px 0px 0.2px white;*/
     }
 
     .navbar-default .navbar-header .navbar-brand {
@@ -165,7 +165,7 @@ aside {
     .navbar-default.affix {
         border-color: rgba(34,34,34,.05);
         background-color: #fff;
-        text-shadow: 0px 0px 0.2px white;
+        /*text-shadow: 0px 0px 0.2px white;*/
     }
 
     .navbar-default.affix .navbar-header .navbar-brand {
@@ -175,13 +175,13 @@ aside {
         font-family: 'ArialRoundedMTBold';
         font-size: 26px;
         color: #f05f40;
-        text-shadow: 0px 0px 0.2px white;
+        /*text-shadow: 0px 0px 0.2px white;*/
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
         color: #eb3812;
-        text-shadow: 0px 0px 0.1px #000;
+        /*text-shadow: 0px 0px 0.1px #000;*/
     }
 
     .navbar-default.affix .nav > li>a,
@@ -192,7 +192,7 @@ aside {
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
         color: #f05f40;
-        text-shadow: 0px 0px 0.1px #000;
+        /*text-shadow: 0px 0px 0.1px #000;*/
     }
 }
 
