fixed nav bar scroll down color clarity

--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -175,7 +175,7 @@ aside {
         font-family: 'ArialRoundedMTBold';
         font-size: 26px;
         color: #f05f40;
-        /*text-shadow: 0px 0px 0.2px white;*/
+        text-shadow: 0px 0px 0.2px white;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
