--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -152,9 +152,10 @@ aside {
         color: #f05f40;
     }
 
+/*colour buttons nav bar right*/
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
+        color: #fff;
     }
 
     .navbar-default .nav > li>a:hover,
