--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <title>Instela</title>
   <%= favicon_link_tag 'favicon-magic.ico' %>
   <%= display_meta_tags %>
+  <meta name="google-site-verification" content="MwtsBPcUFWCOhhZB8kpeTyOZJVoHCz2QP0HUaWTFGIA" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
