--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -26,6 +26,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li id="register_button">
+                    <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "page-scroll btn btn-primary btn-lg outline" %>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
