--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -112,7 +112,7 @@ aside {
 .navbar-default .nav>li>a:focus {
     text-transform: uppercase;
     font-size: 13px;
-    font-weight: 700;
+    font-weight: 500;
     color: #222;
 }
 
@@ -481,7 +481,7 @@ fieldset[disabled] .btn-primary.active {
 
 .btn {
     border: 0;
-    // border-radius: 300px;
+    /*border-radius: 300px;*/
     text-transform: uppercase;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
@@ -559,6 +559,7 @@ body {
 /*Video*/
 #video-background {
 /*  making the video fullscreen  */
+  background-size: cover;
   position: absolute;
   display: block;
   right: 0;
@@ -573,17 +574,17 @@ body {
   padding: 0;
 }
 
-// Improve quality of low resolution video
-.overlay-texture:before{
+/*Improve quality of low resolution video*/
+/*.overlay-texture:before{
    background:url(
 data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQIW2NkYGCQZGBgeM4ABYxQGi4IEwCJgwWRBcCCAHczAx4qv3vfAAAAAElFTkSuQmCC
    ) repeat;
-}
+}*/
 
-// Remove space in video at the top of services section
-// #services {
-//     margin-top: 0;
-// }
+/*Remove space in video at the top of services section*/
+#services {
+ margin-top: 0;
+}
 
 // ouline buttons
 .btn.outline {
@@ -592,23 +593,29 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQIW2
 }
 
 .btn-primary.outline {
-    border: 2px solid #fff;
+    border: 1px solid #fff;
     color: #fff;
+    border-radius: 0;
+}
+
+.register_button {
+    border-radius: 0;
 }
 
 .btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
-    color: #f05f40;
+    color: #fff !important;;
     border-color: #f05f40;
+    background-color: #f05f40 !important;
 }
 .btn-primary.outline:active, .btn-primary.outline.active {
     border-color: #f05f40;
-    color: #f05f40;
+    color: #fff !important;
+    background-color: #f05f40 !important;
     box-shadow: none;
 }
 
 #register_button {
-    margin: 7px;
-    margin-left: 0;
+    margin: 8px;
 }
 
 
