--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -25,8 +25,8 @@
                                     <br>
                                     <h4>Send an SMS to this number to get started</h4>
                                     <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
-                                    <br>
-                                    <%= link_to 'REGISTER MY DETAILS', new_account_path, class: "btn btn-primary btn-lg outline" %>
+                                    <hr>
+                                    <%= link_to 'GET STARTED - FREE SIGN UP!', new_account_path, class: "btn btn-primary btn-xl page-scroll register_button" %>
                                 <!-- </div> -->
                             <!-- </div> -->
                         </div>
