--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -113,6 +113,7 @@ aside {
     text-transform: uppercase;
     font-size: 13px;
     font-weight: 500;
+    font-family: "brandon-grotesque", sans-serif;
     color: #222;
 }
 
@@ -564,9 +565,8 @@ body {
   right: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
-  /*width: initial;
-  height: auto;*/
+  // width: initial;
+  height: auto;
   z-index: -1;
   margin: 0 auto;
   object-fit: cover;
@@ -574,16 +574,16 @@ body {
 }
 
 /*Improve quality of low resolution video*/
-/*.overlay-texture:before{
+.overlay-texture:before{
    background:url(
 data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQIW2NkYGCQZGBgeM4ABYxQGi4IEwCJgwWRBcCCAHczAx4qv3vfAAAAAElFTkSuQmCC
    ) repeat;
-}*/
+}
 
 /*Remove space in video at the top of services section*/
-#services {
- margin-top: 0;
-}
+// #services {
+//  margin-top: 0;
+// }
 
 // ouline buttons
 .btn.outline {
@@ -602,7 +602,7 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQIW2
 }
 
 .btn-primary.outline:hover, .btn-primary.outline:focus, .btn-primary.outline:active, .btn-primary.outline.active, .open > .dropdown-toggle.btn-primary {
-    color: #fff !important;;
+    color: #fff !important;
     border-color: #f05f40;
     background-color: #f05f40 !important;
 }
@@ -620,3 +620,4 @@ data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAIUlEQVQIW2
 .layer {
     box-shadow: inset 0 0 0 1000px rgba(0,0,0,.45);
 }
+
