--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -15,7 +15,7 @@
                     <!-- Embed Video as Background-->
                     <div class="container-fluid">
                         <div class="overlay-texture">
-                            <%= video_tag("office_video.mp4", :controls => false, :autobuffer => true, :autoplay => true, :loop => true, :id => "video-background") %>
+                            <%= video_tag("office_video.mp4", :controls => true, :autobuffer => true, :autoplay => true, :loop => true, :id => "video-background") %>
                         </div>
                     </div>
                     <div class="container-fluid key_text">
