--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -573,8 +573,8 @@ body {
   padding: 0;
 }
 
-video::-webkit-media-controls {
-    display:none !important;
+video::-webkit-media-controls-start-playback-button {
+  display: none !important;
 }
 
 /*Improve quality of low resolution video*/
