--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,18 @@
   <title>Instela</title>
   <%= favicon_link_tag 'favicon-magic.ico' %>
   <%= display_meta_tags %>
+  <% if Rails.env.production?  %>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-76519341-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+  <% end %>  
   <meta name="google-site-verification" content="MwtsBPcUFWCOhhZB8kpeTyOZJVoHCz2QP0HUaWTFGIA" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <%= stylesheet_link_tag 'creative/manifest.css', media: 'all' %>
