--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -81,7 +81,7 @@
 	          We also work closely with third parties (including, for example, business partners, sub-contractors in technical, payment and delivery services, advertising networks, analytics providers, search information providers, credit reference agencies) and may receive information about you from them.
 	        </li>
 	        <li>
-	          If you are using the site as one of our registered service providers (a <b>Service Provider</b>), we will collect and store the information you supply to us during the application process and thereafter. We may also collect supplemental information about you from third parties. For example, we reserve the right to carry out Criminal Records Bureau and other checks into your background.
+	          If you are using the site as one of our registered service providers, commonly known as 'Maestros', (a <b>Maestro</b>), we will collect and store the information you supply to us during the application process and thereafter. We may also collect supplemental information about you from third parties. For example, we reserve the right to carry out Criminal Records Bureau and other checks into your background.
 	        </li>
 	      </ol>
 
@@ -207,11 +207,11 @@
 
 	        </li>
 	        <li>
-	          <b>Very important:</b> If, as a user of the site, you have booked a Service Provider to provide services to you,  we will provide your contact details to the relevant Service Provider in order to enable them to attend at service visits and to contact you if necessary (for example, if the Service Provider is delayed).
+	          <b>Very important:</b> If, as a user of the site, you have booked a Maestro to provide services to you,  we will provide your contact details to the relevant Maestro in order to enable them to attend at service visits and to contact you if necessary (for example, if the Maestro is delayed).
 
 	        </li>
 	        <li>
-	          <b>Very important:</b> We will include the Service Provider’s first name and photograph in their profile on the site, which will be available to and searchable by all users of the site. We will also pass the Service Provider’s full name and telephone number to any user of the site who has booked and paid a deposit for a Service Provider to provide services to them.
+	          <b>Very important:</b> We will include the Maestro’s first name and photograph in their profile on the site, which will be available to and searchable by all users of the site. We will also pass the Maestro’s full name and telephone number to any user of the site who has booked and paid a deposit for a Maestro to provide services to them.
 	        </li>
 	        <li>
 	          <b>Very important:</b> If you post a review/rating/comment on the site, your username will be shown.
