--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -38,7 +38,7 @@ a:focus {
 
 h1,
 h2{
-    font-family: 'ArialRoundedMTBold';
+    font-family: ArialRoundedMTBold, "Arial Rounded MT Bold", Arial, Helvetica, sans-serif;
     /*font-family: 'Open Sans','Helvetica Neue','ArialRoundedMTBold';*/
 }
 
