--- a/app/views/creatives/_bg_primary.html.erb
+++ b/app/views/creatives/_bg_primary.html.erb
@@ -9,7 +9,7 @@
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
                     <i class="fa fa-4x fa-power-off wow bounceIn"></i>
-                    <h3>On-demand support  Pay as You Go</h3>
+                    <h3>On-Demand Support Pay As You Go</h3>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
