--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -1,6 +1,8 @@
 <footer class="footer">
     <div class="container-fluid text-center">
       Instela is a service provided by Instela Ltd, located in London, UK.<br><br>
+      <a href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" style="font-size:10pt;color:#555">Work With US</a>
+      <span style="font-size:10pt;color:#555">|</span>
       <a href="mailto:hello@instela.co" style="font-size:10pt;color:#555">Contact Us</a>
       <span style="font-size:10pt;color:#555">|</span>
       <a href="/pages/terms" style="font-size:10pt;color:#555">Terms of Use</a>
