--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -24,6 +24,9 @@
                     <a class="page-scroll" href="#examples">Examples</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform">Work with us</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li id="register_button">
