--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -14,22 +14,18 @@
                     </script>
                     <!-- Embed Video as Background-->
                     <div class="container-fluid">
-                        <div class="overlay-texture">
+                        <div style="width:initial">
                             <%= video_tag("https://s3-eu-west-1.amazonaws.com/instelaltd/videos/office_video.mp4", :controls => true, :autobuffer => false, :autoplay => true, :loop => true, :id => "video-background") %>
                         </div>
                     </div>
                     <div class="container-fluid key_text">
-                            <!-- <div class="row"> -->
-                                <!-- <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1"> -->
                         <h2>Make Everything Work in Your Office</h2>
-                        <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:07454574821">07 45 45 74 821</a></h1>
+                        <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:+447454574821">07 45 45 74 821</a></h1>
                         <br>
                         <h4>Send an SMS to this number to get started</h4>
                         <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
                         <hr>
                         <%= link_to 'GET STARTED - FREE SIGN UP!', new_account_path, class: "btn btn-primary btn-xl page-scroll register_button" %>
-                                <!-- </div> -->
-                            <!-- </div> -->
                     </div>
                 </section>
 
