open in a new tab links

--- a/app/views/accounts/_navbar.html.erb
+++ b/app/views/accounts/_navbar.html.erb
@@ -24,7 +24,7 @@
                     <a class="page-scroll" href="/#examples">Examples</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform">Work with us</a>
+                    <a class="page-scroll" href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" target="_blank">Work with us</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="/accounts/new#contact">Contact</a>
