--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -1,12 +1,12 @@
 <footer class="footer">
     <div class="container-fluid text-center">
       Instela is a service provided by Instela Ltd, located in London, UK.<br><br>
-      <a href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" style="font-size:10pt;color:#555">Work With US</a>
+      <a href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" target="_blank" style="font-size:10pt;color:#555">Work With US</a>
       <span style="font-size:10pt;color:#555">|</span>
       <a href="mailto:hello@instela.co" style="font-size:10pt;color:#555">Contact Us</a>
       <span style="font-size:10pt;color:#555">|</span>
-      <a href="/pages/terms" style="font-size:10pt;color:#555">Terms of Use</a>
+      <a href="/pages/terms" target="_blank" style="font-size:10pt;color:#555">Terms of Use</a>
       <span style="font-size:10pt;color:#555">|</span>
-      <a href="/pages/privacy" style="font-size:10pt;color:#555">Privacy Policy</a>
+      <a href="/pages/privacy" target="_blank" style="font-size:10pt;color:#555">Privacy Policy</a>
     </div>
 </footer>
