--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -3,13 +3,14 @@
         <div class="container-fluid">
             <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
 <!--             Add style ect to css, need to remove p tag  -->
-                <h3 style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';">Register My Details</h3>
+                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">We will get back to you shortly!</h3>
                 <p></p>
                 <%= form_for @account, url: {action: 'create'} do |f| %>
                   <%= f.error_messages %>
 
                   <div class="form-group">
-                    <%= f.text_field :first_name, :required => true, placeholder: 'First Name', class: 'form-control' %>
+                    <!-- <label id="f_name">First Name</label> -->
+                    <%= f.text_field :first_name, :required => true, placeholder: 'First Name', class: 'form-control'%>
                   </div>
                   <div class="form-group">
                     <%= f.text_field :last_name, :required => true, placeholder: 'Last Name', class: 'form-control' %>
@@ -42,11 +43,11 @@
                     </div>
                   </div> -->
                   <div class="form-group">
-                    <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-register' %>
+                    <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
                   </div>
                   <br>
                   <!-- <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered.</p> -->
-                  <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">
+                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">
                   <!-- <input type="checkbox" required name="terms"> -->
                   By registering your details<br> you agree that you have read and accepted the <br><a href="/pages/terms">Terms and Conditions</a></p>
                 <% end %>
