--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -30,7 +30,7 @@
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
                 <li id="register_button">
-                    <%= link_to 'SIGN UP', new_account_path, class: "page-scroll btn btn-primary btn-lg outline" %>
+                    <%= link_to 'GET STARTED', contact_path, class: "page-scroll btn btn-primary btn-lg outline" %>
                 </li>
             </ul>
         </div>
