--- a/app/assets/stylesheets/creative/creative.css.scss
+++ b/app/assets/stylesheets/creative/creative.css.scss
@@ -214,7 +214,7 @@ header {
 
 .accounts_header {
     /*background-image: asset-data-url("creative/header.jpg");*/
-    background-color: #0077BE;
+    background-color: #528BE2;
 }
 
 header .header-content {
