--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -44,9 +44,9 @@
                     </div>
                     <br><br>
                   </div>
-                  <div class="form-group">
+                  <!-- <div class="form-group">
                     <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
-                  </div>
+                  </div> -->
                   <br>
                   <!-- <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered.</p> -->
                   <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">
