simplified nav bar and switch back to sign up call to action

--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -39,8 +39,8 @@
                   <br>
                   <div class="row">
                     <div class="col-lg-4 col-lg-offset-4 col-md-2 col-md-offset-5  col-sm-2 col-sm-offset-5 col-xs-6 col-xs-offset-3">
-                    
-                    <%= link_to image_tag("accounts/outline.png", :class => 'img-responsive'), "https://stripe.com/about"%>
+
+                    <%= link_to image_tag("accounts/light_solid.png", :class => 'img-responsive'), "https://stripe.com/about"%>
                     </div>
                     <br><br>
                   </div>
@@ -48,10 +48,10 @@
                     <%= f.submit 'REGISTER', class: 'page-scroll btn btn-primary btn-lg outline submit-account' %>
                   </div> -->
                   <br>
-                  <!-- <p style="text-align: center; color: black; font-family: 'ArialRoundedMTBold';font-size: 14px;">We only charge your credit card once a service has been delivered.</p> -->
-                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 14px;">
+                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 15px;">We will only charge your credit card once a service has been delivered.</p>
+                  <p style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';font-size: 15px;">
                   <!-- <input type="checkbox" required name="terms"> -->
-                  By registering your details<br> you agree that you have read and accepted the <br><a href="/pages/terms">Terms and Conditions</a></p>
+                  By registering your details<br> you agree that you have read and accepted the <br><a href="/pages/terms">Terms and Conditions</a>.</p>
                 <% end %>
             </div>
         </div>
