--- a/app/views/creatives/_footer.html.erb
+++ b/app/views/creatives/_footer.html.erb
@@ -1,6 +1,8 @@
 <footer class="footer">
     <div class="container-fluid text-center">
       Instela is a service provided by Instela Ltd, located in London, UK.<br><br>
+      <%= link_to 'Contact Us', contact_path, style:"font-size:10pt;color:#555" %>
+      <span style="font-size:10pt;color:#555">|</span>
       <a href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" target="_blank" style="font-size:10pt;color:#555">Work With US</a>
       <span style="font-size:10pt;color:#555">|</span>
       <a href="/pages/terms" target="_blank" style="font-size:10pt;color:#555">Terms of Use</a>
@@ -8,3 +10,4 @@
       <a href="/pages/privacy" target="_blank" style="font-size:10pt;color:#555">Privacy Policy</a>
     </div>
 </footer>
+
