--- a/app/views/creatives/_navbar.html.erb
+++ b/app/views/creatives/_navbar.html.erb
@@ -26,11 +26,8 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
-                <li>
-                    <a class="page-scroll" href="https://docs.google.com/forms/d/1V1NAXNM41W30mEjl3PP4NY6ESZIxf6nlxV1YBLyQYxw/viewform" target="_blank">Work with us</a>
-                </li>
                 <li id="register_button">
-                    <%= link_to 'GET STARTED', contact_path, class: "page-scroll btn btn-primary btn-lg outline" %>
+                    <%= link_to 'SIGN UP', new_account_path, class: "page-scroll btn btn-primary btn-lg outline" %>
                 </li>
             </ul>
         </div>
@@ -38,5 +35,6 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
+
 
 
