--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -4,7 +4,7 @@
     <div class="header-content">
         <div class="container-fluid">
             <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
-                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">We will get back to you shortly!</h3>
+                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Get in touch and let us know how we can help</h3>
                 <p></p>
                 <%= form_for @message, url: contact_path do |f| %>
                   <%= f.error_messages %>
