--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -5,7 +5,7 @@
 <!--             Add style ect to css, need to remove p tag  -->
                 <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Sign Up</h3>
                 <p></p>
-                <%= form_for @account, url: {action: 'create'} do |f| %>
+                <%= form_for(resource, as: resource_name, validate: true, url: user_registration_path(resource_name)) do |f| %>
                   <%= f.error_messages %>
 
                   <div class="form-group">
@@ -20,6 +20,12 @@
                   </div>
                   <div class="form-group">
                     <%= f.text_field :email, :required => true, placeholder: 'Email', class: 'form-control' %>
+                  </div>
+                  <div class="form-group">
+                    <%= f.password_field :password, :required => '', placeholder: 'Password', class: 'form-control'  %>
+                  </div>
+                  <div class="form-group">
+                    <%= f.password_field :password_confirmation, :required => '', placeholder: 'Password Confirmation', class: 'form-control'%>
                   </div>
                   <div class="form-group">
                     <%= f.text_field :mobile_phone, :required => true, placeholder: 'Mobile Phone Number', class: 'form-control' %>
