--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -25,7 +25,7 @@
                         <h4>Send an SMS to this number to get started</h4>
                         <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
                         <hr>
-                        <%= link_to 'OPEN AN ACCOUNT - FREE SIGN UP', new_account_path, class: "btn btn-primary btn-xl page-scroll register_button" %>
+                        <%= link_to 'OPEN AN ACCOUNT - FREE SIGN UP', new_account_registration_path, class: "btn btn-primary btn-xl page-scroll register_button" %>
                     </div>
                 </section>
                 <% flash.each do |key, value| %>
