--- a/app/views/accounts/_header.html.erb
+++ b/app/views/accounts/_header.html.erb
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <div class="col-lg-4 col-lg-offset-4 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 registration_form">
 <!--             Add style ect to css, need to remove p tag  -->
-                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">Sign up to order services</h3>
+                <h3 style="text-align: center; color: white; font-family: 'ArialRoundedMTBold';">SIGN UP TO ORDER SERVICES</h3>
                 <p></p>
                 <%= form_for @account, url: {action: 'create'} do |f| %>
                   <%= f.error_messages %>
