minor changes header

--- a/app/views/creatives/_header.html.erb
+++ b/app/views/creatives/_header.html.erb
@@ -20,7 +20,7 @@
                     </div>
                     <div class="container-fluid key_text">
                         <h2>Make Everything Work in Your Office</h2>
-                        <h1 style="color: #f05f40;"><a style="text-decoration: none; color:#eb3812;" href="sms:+447454574821">07 45 45 74 821</a></h1>
+                        <h1 style="color: #f05f40;"><a style="text-decoration: none;" href="sms:+447454574821">07 45 45 74 821</a></h1>
                         <br>
                         <h4>Send an SMS to this number to get started</h4>
                         <h4>Available on-demand during weekdays from 8AM until 8PM</h4>
